--- a/index1.css
+++ b/index1.css
@@ -2,27 +2,31 @@
     margin:0;
     padding:0;
     font-family: sans-serif;
+    box-sizing: border-box;
+    
 }
+html {
+    box-sizing: border-box;
+  }
 body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     margin: 0 0 50px;
-    
 }
 .navbar{
     color: white;
     width: 85%;
-    right: 70%;
-    padding: 35px 0;
+    margin-left: auto;
+    padding: 30px 0;
     display: flex;
-    align-items: center;
     justify-content: right;
+    align-items: center;
 }
 .logo{
     color: white;
     position: absolute;
-    top: 2%;
+    top: 3%;
     left: 8%;
     width: 200px;
     cursor: pointer;
@@ -51,20 +55,14 @@ body{
 .navbar ul li:hover::after{
     width: 100%;
 }
-.btn{
-    border: none;
-    color: white;
-    background-color: transparent
-}
-
 .contents{
     width: 100%;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
-    color:white;
-}
+    color:white;}
+
 .contents h1{
     font-size: 70px;
     margin-top: 80px;
@@ -97,6 +95,7 @@ span{
     bottom:0;
     z-index: -1;
     transition: 0.5s;
+
 }
 #btn2:hover span{
     width:100%
@@ -110,10 +109,107 @@ span{
     position:absolute;
     bottom:0;
     left: 0;
-    overflow: hidden;
 }
-.text{
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+  
+  .card {
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+    margin: 10px;
+  }
+  
+  .about-section {
+    padding: 50px;
     text-align: center;
-    padding-bottom: 30px;
-    background-color: rgb(255, 255, 255);
-}
+    background:transparent;
+    color: white;
+  }
+  
+  .about-section p{
+    margin-top: 5px;
+  }
+
+  .container {
+    padding: 0 16px;
+    overflow: auto;
+  }
+  
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .abutton {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    margin-top: 5px;
+    color: white;
+    background-color: rgb(0, 195, 255);
+    text-align: center;
+    cursor: pointer;
+    font-size: medium;
+    width: 100%;
+  }
+  
+  .button:hover {
+    background-color: #555;
+  }
+  #team{
+    color: whitesmoke;
+  }
+  .container p{
+    color: whitesmoke;
+  }
+  .container h2{
+    color:whitesmoke;
+  }
+  #title {
+    color: lightslategrey
+  }
+  .about-text{
+    margin-top: 10px;
+    color:whitesmoke;
+    font-size: smaller;
+    text-align: center;
+  }
+
+  .row{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .col{ 
+    margin:auto;
+    color: wheat;
+    width: 500px;
+    background-color: red;
+    text-align: center;
+  }
+  .col h1,h2{
+    color:whitesmoke;
+  }
+  .col p{
+    color: whitesmoke;
+  }
+  .required input:after {
+    content:"*"; 
+    color: red;
+  }
+  
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
