--- a/index1.css
+++ b/index1.css
@@ -9,11 +9,17 @@ html {
     box-sizing: border-box;
   }
 body{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.473),rgba(0, 0, 0, 0.5)),url('images/download.png');
+  background-repeat: no-repeat;
+  background-size:cover ;
+  background-position: center;
+  height: 100% 100%;
+
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     margin: 0 0 50px;
-}
+  }
 .navbar{
     color: white;
     width: 85%;
@@ -230,12 +236,8 @@ span{
     margin-bottom: 10px;
   }
   #showroom{
-    display: flex;
     margin-top: 50px;
     margin-left: 20px;
-    width: 350px;
-    height: 350px;
-    border: 2px white solid;
   }
 
   .field label {
@@ -249,8 +251,9 @@ span{
     width: 400px;
     flex-direction: column;
     justify-content: left;
-    height:20px; 
-    margin-bottom: 5px;
+    height:25px;  
+    margin-bottom: 15px;
+    padding: auto;
   }
   .field textarea{
     display: flex;
@@ -259,7 +262,24 @@ span{
     flex-direction: column;
     justify-content: left;
     height :100px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    padding: auto;
+  }
+
+  #todaydate{
+    display:flex;
+    flex-direction:column;
+    text-align: left;
+    color: #fff;
+  }
+  #myDate{
+    display: flex;
+    width: 200px;
+    flex-direction: column;
+    justify-content: left;
+    height:25px;  
+    margin-bottom: 15px;
+    padding: auto;
   }
 
   @media screen and (max-width: 650px) {
