--- a/index1.css
+++ b/index1.css
@@ -27,6 +27,7 @@ body{
     padding: 30px 0;
     display: flex;
     justify-content: right;
+    margin-right: 60px;
     align-items: center;
 }
 .logo{
@@ -36,6 +37,7 @@ body{
     left: 8%;
     width: 200px;
     cursor: pointer;
+    display: block;
 }
 .navbar ul li{
     list-style: none;
@@ -196,7 +198,7 @@ span{
   }
 
   .col{ 
-    margin-right: 150px;
+    margin-right: 100px;
     margin-top: 70px;
     text-align: center;
     width: 60%;
@@ -207,7 +209,7 @@ span{
     margin-right: 30px;
     margin-top: 70px;
     text-align: center;
-    width: 60%;
+    width: 50%;
     padding: 20px;
     }
     
@@ -219,11 +221,6 @@ span{
       clear: both;
     }
 
-    @media screen and (max-width: 600px) {
-      .col {
-        width: 100%;
-      }
-    }
 
   .col h1,h2,p{
     color:whitesmoke;
@@ -232,8 +229,11 @@ span{
   .col1 h3{
     color: whitesmoke;
     justify-content: center;
-    margin-right: 100px;
-    margin-bottom: 10px;
+    text-align: center;
+    margin-bottom: 15px;
+    padding-right: 50px;
+
+
   }
   #showroom{
     margin-top: 50px;
@@ -244,15 +244,16 @@ span{
     display:flex;
     flex-direction:column;
     text-align: left;
+    margin-left: 20%;
     color: #fff;
   }
   .field input,option,select{
     display: flex;
     width: 400px;
     flex-direction: column;
-    justify-content: left;
     height:25px;  
     margin-bottom: 15px;
+    margin-left:20%;
     padding: auto;
   }
   .field textarea{
@@ -260,8 +261,14 @@ span{
     resize: none;
     width: 400px;
     flex-direction: column;
-    justify-content: left;
     height :100px;
+    margin-left:20%;
     margin-bottom: 15px;
     padding: auto;
+  }
+
+  #submit{
+    display: flex;
+    padding: auto;
+    width: 50px;
   }
