--- a/index1.css
+++ b/index1.css
@@ -138,12 +138,42 @@ span{
     padding: 50px;
     text-align: center;
     background:transparent;
-    color: white;
+    color: whitesmoke;
   }
   
   .about-section p{
     margin-top: 5px;
+    font-size: smaller;
   }
+
+  .core-value{
+    padding: 50px;
+    text-align: left;
+    background:transparent;
+    color: whitesmoke;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-left: 20px;
+  }
+.core-value h1,h2{
+  margin-bottom: 15px;
+  color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.core-value ul li{
+  margin-bottom: 10px;
+  color: whitesmoke;
+}
+
+.footer{
+  color: whitesmoke;
+  margin-left: 30px;
+  margin-top: 20px;
+  color: gray;
+}
+
+#name{
+  color: lightskyblue;
+}
 
   .container {
     padding: 0 16px;
@@ -178,6 +208,7 @@ span{
   }
   .container p{
     color: whitesmoke;
+    overflow:clip;
   }
   .container h2{
     color:whitesmoke;
@@ -185,13 +216,6 @@ span{
   #title {
     color: lightslategrey
   }
-  .about-text{
-    margin-top: 10px;
-    color:whitesmoke;
-    font-size: smaller;
-    text-align: center;
-  }
-
   .row{
     display: flex;
     justify-content: center;
@@ -201,6 +225,7 @@ span{
     margin-right: 100px;
     margin-top: 70px;
     text-align: center;
+    max-width: 700px;
     width: 60%;
     padding: 20px;
     }
@@ -209,7 +234,8 @@ span{
     margin-right: 30px;
     margin-top: 70px;
     text-align: center;
-    width: 50%;
+    max-width: 700px;
+    width:700px;
     padding: 20px;
     }
     
@@ -224,20 +250,23 @@ span{
 
   .col h1,h2,p{
     color:whitesmoke;
-  }
+  } 
 
   .col1 h3{
     color: whitesmoke;
     justify-content: center;
     text-align: center;
     margin-bottom: 15px;
-    padding-right: 50px;
-
-
   }
   #showroom{
     margin-top: 50px;
     margin-left: 20px;
+    max-width: 500px;
+    max-height: 300px;
+  }
+  #showroom-text{
+    margin-top: 10px;
+    margin-right: 20px;
   }
 
   .field label {
@@ -249,7 +278,8 @@ span{
   }
   .field input,option,select{
     display: flex;
-    width: 400px;
+    max-width: 700px;
+    width: 70%;
     flex-direction: column;
     height:25px;  
     margin-bottom: 15px;
@@ -259,7 +289,8 @@ span{
   .field textarea{
     display: flex;
     resize: none;
-    width: 400px;
+    max-width: 700px;
+    width: 70%;
     flex-direction: column;
     height :100px;
     margin-left:20%;
@@ -272,3 +303,68 @@ span{
     padding: auto;
     width: 50px;
   }
+
+  @media (max-width: 800px) {
+    .f {
+      flex-direction: column;
+    }
+  }
+
+hr{
+  width:80%;
+  margin:0 auto;
+  
+}
+  .main {
+    max-width: 1000px;
+    margin: auto;
+  }
+  
+  .prow h1 {
+    font-size: 50px;
+    word-break: break-all;
+  }
+  
+  .prow {
+    margin: 8px -16px;
+  }
+  
+  /* Add padding BETWEEN each column (if you want) */
+  .prow,
+  .prow > .pcolumn {
+    padding: 8px;
+  }
+  
+  /* Create four equal columns that floats next to each other */
+  .pcolumn {
+    float: left;
+    width: 50%;
+  }
+  
+  /* Clear floats after rows */
+  .prow:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Content */
+  .pcontent {
+    background-color: white;
+    padding: 10px;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 900px) {
+    .pcolumn {
+      width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
+  
