--- a/index1.css
+++ b/index1.css
@@ -5,9 +5,11 @@
     box-sizing: border-box;
     
 }
+
 html {
     box-sizing: border-box;
   }
+
 body{
   background-image: linear-gradient(rgba(0, 0, 0, 0.473),rgba(0, 0, 0, 0.5)),url('images/download.png');
   background-repeat: no-repeat;
@@ -15,11 +17,12 @@ body{
   background-position: center;
   height: 100% 100%;
 
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0 0 50px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0 0 50px;
   }
+
 .navbar{
     color: white;
     width: 85%;
@@ -30,26 +33,31 @@ body{
     margin-right: 60px;
     align-items: center;
 }
+
 .logo{
     color: white;
     position: absolute;
     top: 3%;
     left: 8%;
     width: 200px;
+    max-width: 100%;
     cursor: pointer;
     display: block;
 }
+
 .navbar ul li{
     list-style: none;
     display: inline-block;
     margin: 0 20px;
     position: relative;
 }
+
 .navbar ul li a{
     text-decoration: none;
     color: white;
     text-transform: uppercase;
 }
+
 .navbar ul li::after{
     content: '';
     height: 3px;
@@ -60,26 +68,31 @@ body{
     bottom: -5px;
     transition: 0.3s;
 }
+
 .navbar ul li:hover::after{
     width: 100%;
 }
+
 .contents{
     width: 100%;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
-    color:white;}
+    color:white;
+  }
 
 .contents h1{
     font-size: 70px;
     margin-top: 80px;
 }
+
 .contents p{
     margin: 20px auto;
     font-weight: 100%;
     line-height: 25px;
 }
+
 #btn2{
     width: 200px;
     padding: 15px 0;
@@ -93,6 +106,7 @@ body{
     cursor: pointer;
     position: relative;
 }
+
 span{
     background: #009688;
     height: 100%;
@@ -105,12 +119,15 @@ span{
     transition: 0.5s;
 
 }
+
 #btn2:hover span{
     width:100%
 }
+
 #btn2:hover{
     border: none;
 }
+
 #features{
     width: 100%;
     padding: 70px 0px;
@@ -118,6 +135,7 @@ span{
     bottom:0;
     left: 0;
 }
+
 *, *:before, *:after {
     box-sizing: inherit;
   }
@@ -154,20 +172,22 @@ span{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-left: 20px;
   }
+
 .core-value h1,h2{
   margin-bottom: 15px;
   color: white;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
 .core-value ul li{
   margin-bottom: 10px;
   color: whitesmoke;
 }
 
 .footer{
-  color: whitesmoke;
+  display: block;
+  margin-top: 10px;
   margin-left: 30px;
-  margin-top: 20px;
   color: gray;
 }
 
@@ -175,196 +195,204 @@ span{
   color: lightskyblue;
 }
 
-  .container {
-    padding: 0 16px;
-    overflow: auto;
-  }
+.container {
+  padding: 0 16px;
+  overflow: auto;
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.abutton {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  margin-top: 5px;
+  color: white;
+  background-color: rgb(0, 195, 255);
+  text-align: center;
+  cursor: pointer;
+  font-size: medium;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
+}
+
+#team{
+  color: whitesmoke;
+}
+
+.container p{
+  color: whitesmoke;
+  overflow:clip;
+}
+
+.container h2{
+  color:whitesmoke;
+}
+
+#title {
+  color: lightslategrey
+}
+
+.row{
+  display: flex;
+  justify-content: center;
+}
+
+.col{ 
+  margin-right: 100px;
+  margin-top: 70px;
+  text-align: center;
+  max-width: 700px;
+  width: 60%;
+  padding: 20px;
+}
+
+.col1{ 
+  margin-right: 30px;
+  margin-top: 70px;
+  text-align: center;
+  max-width: 700px;
+  width:700px;
+  padding: 20px;
+}
   
-  .container::after, .row::after {
+  
+.row:after {
     content: "";
-    clear: both;
     display: table;
-  }
-  
-  .abutton {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    margin-top: 5px;
-    color: white;
-    background-color: rgb(0, 195, 255);
-    text-align: center;
-    cursor: pointer;
-    font-size: medium;
-    width: 100%;
-  }
-  
-  .button:hover {
-    background-color: #555;
-  }
-  #team{
-    color: whitesmoke;
-  }
-  .container p{
-    color: whitesmoke;
-    overflow:clip;
-  }
-  .container h2{
-    color:whitesmoke;
-  }
-  #title {
-    color: lightslategrey
-  }
-  .row{
-    display: flex;
-    justify-content: center;
-  }
-
-  .col{ 
-    margin-right: 100px;
-    margin-top: 70px;
-    text-align: center;
-    max-width: 700px;
-    width: 60%;
-    padding: 20px;
-    }
-
-  .col1{ 
-    margin-right: 30px;
-    margin-top: 70px;
-    text-align: center;
-    max-width: 700px;
-    width:700px;
-    padding: 20px;
-    }
-    
-
-    
-    .row:after {
-      content: "";
-      display: table;
-      clear: both;
-    }
+    clear: both;
+}
 
 
-  .col h1,h2,p{
-    color:whitesmoke;
-  } 
+.col h1,h2,p{
+  color:whitesmoke;
+  margin-bottom: 10px;
+} 
 
-  .col1 h3{
-    color: whitesmoke;
-    justify-content: center;
-    text-align: center;
-    margin-bottom: 15px;
-  }
-  #showroom{
-    margin-top: 50px;
-    margin-left: 20px;
-    max-width: 500px;
-    max-height: 300px;
-  }
-  #showroom-text{
-    margin-top: 10px;
-    margin-right: 20px;
-  }
+.col1 h3{
+  color: whitesmoke;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 15px;
+}
 
-  .field label {
-    display:flex;
-    flex-direction:column;
-    text-align: left;
-    margin-left: 20%;
-    color: #fff;
-  }
-  .field input,option,select{
-    display: flex;
-    max-width: 700px;
-    width: 70%;
+#showroom{
+  margin: auto;
+  max-width: 500px;
+  max-height: 300px;
+  position: static;
+}
+
+#showroom-text{
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+
+.field label {
+  display:flex;
+  flex-direction:column;
+  text-align: left;
+  margin-left: 20%;
+  color: #fff;
+}
+
+.field input,option,select{
+  display: flex;
+  max-width: 700px;
+  width: 70%;
+  flex-direction: column;
+  height:25px;  
+  margin-bottom: 15px;
+  margin-left:20%;
+  padding: auto;
+}
+
+.field textarea{
+  display: flex;
+  resize: none;
+  max-width: 700px;
+  width: 70%;
+  flex-direction: column;
+  height :100px;
+  margin-left:20%;
+  margin-bottom: 15px;
+  padding: auto;
+}
+
+#submit{
+  display: flex;
+  padding: auto;
+  width: 50px;
+}
+
+@media (max-width: 800px) {
+  .f {
     flex-direction: column;
-    height:25px;  
-    margin-bottom: 15px;
-    margin-left:20%;
-    padding: auto;
   }
-  .field textarea{
-    display: flex;
-    resize: none;
-    max-width: 700px;
-    width: 70%;
-    flex-direction: column;
-    height :100px;
-    margin-left:20%;
-    margin-bottom: 15px;
-    padding: auto;
-  }
-
-  #submit{
-    display: flex;
-    padding: auto;
-    width: 50px;
-  }
-
-  @media (max-width: 800px) {
-    .f {
-      flex-direction: column;
-    }
-  }
+}
 
 hr{
-  width:80%;
-  margin:0 auto;
-  
+width:80%;
+margin:0 auto;
 }
-  .main {
-    max-width: 1000px;
-    margin: auto;
-  }
-  
-  .prow h1 {
-    font-size: 50px;
-    word-break: break-all;
-  }
-  
-  .prow {
-    margin: 8px -16px;
-  }
-  
-  /* Add padding BETWEEN each column (if you want) */
-  .prow,
-  .prow > .pcolumn {
-    padding: 8px;
-  }
-  
-  /* Create four equal columns that floats next to each other */
-  .pcolumn {
-    float: left;
+.main {
+  max-width: 1000px;
+  margin: auto;
+}
+
+.prow h1 {
+  font-size: 50px;
+  word-break: break-all;
+}
+
+.prow {
+  margin: 8px -16px;
+}
+
+.prow,
+.prow > .pcolumn {
+  padding: 8px;
+}
+
+.pcolumn {
+  float: left;
+  width: 50%;
+  max-width: 100%;
+}
+
+.prow:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.pcontent {
+  background-color: white;
+  padding: 10px;
+}
+.pcontent p{
+  color:grey;
+}
+
+@media screen and (max-width: 900px) {
+  .pcolumn,
+  .col,.col1,
+  .column,.container {
     width: 50%;
   }
-  
-  /* Clear floats after rows */
-  .prow:after {
-    content: "";
-    display: table;
-    clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
   }
-  
-  /* Content */
-  .pcontent {
-    background-color: white;
-    padding: 10px;
-  }
-  
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 900px) {
-    .pcolumn {
-      width: 50%;
-    }
-  }
-  
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-    }
-  }
-  
+}
