--- a/index1.css
+++ b/index1.css
@@ -178,9 +178,11 @@ span{
 
 .footer{
   display: block;
-  margin-top: 10px;
+  margin-top: 10rem;
   margin-left: 30px;
   color: gray;
+  position: sticky;
+  bottom: 0;
 }
 
 #name{
@@ -296,8 +298,8 @@ span{
 
 .field input,option,select{
   display: flex;
-  max-width: 30rem;
-  width: 70%;
+  max-width: 70rem;
+  width: 100%;
   flex-direction: column;
   height:25px;  
   margin-bottom: 15px;
@@ -307,8 +309,8 @@ span{
 .field textarea{
   display: flex;
   resize: none;
-  max-width: 30rem;
-  width: 70%;
+  max-width: 70rem;
+  width: 100%;
   flex-direction: column;
   height :100px;
   margin-bottom: 15px;
